...
      },
      hideForgotPasswordButton: true,
      messages: LoginMessages(
        userHint: 'Username',
        passwordHint: 'Password',
        confirmPasswordHint: 'Confirm Password',
        loginButton: 'LOGIN',
        signupButton: 'REGISTER',
        goBackButton: 'BACK',
        confirmPasswordError: 'Passwords do not match!',
        flushbarTitleError: 'Error', // Add this
        flushbarTitleSuccess: 'Success', // Add this
      ),
...
