...
              final shouldRefresh = await context.push<bool>('/teams/create');
              if (shouldRefresh == true) {
                _loadUserTeams();
                if (mounted) {
                  scaffoldMessenger.showSnackBar(
                    SnackBar(
                      content: const Text('Successfully create a team'),
                      backgroundColor: Colors.green,
                      behavior: SnackBarBehavior.floating,
                      action: SnackBarAction(
                        label: 'Dismiss',
                        textColor: Colors.yellow,
                        onPressed: () => scaffoldMessenger.hideCurrentSnackBar(),
...
